--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_form_builder: ^6.0.1
+  lit_firebase_auth: ^0.2.3
+  font_awesome_flutter: ^9.1.0
+  google_fonts: ^1.1.0
+  animations: ^1.1.2
+  url_launcher: ^5.0.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -46,8 +53,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/safety.png
+    - assets/splash.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
