--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_form_builder: ^6.0.1
+  
   lit_firebase_auth: ^0.2.3
   font_awesome_flutter: ^9.1.0
   google_fonts: ^1.1.0
   animations: ^1.1.2
   url_launcher: ^5.0.0
-  
+
+  firebase_core: ^0.4.5
+  firebase_database: ^3.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
